<resources>
    <string name="app_name">WhatsApp</string>
    <string name="Search">Search</string>
    <string name="newgroup">New Group</string>
    <string name="newbroadcast">New Broadcast</string>
    <string name="whatsappWeb">WhatsApp Web</string>
    <string name="starredMessage">Starred Messages</string>
    <string name="payments">Payments</string>
    <string name="settings">Settings</string>
    <string name="chats">CHATS</string>
    <string name="status">STATUS</string>
    <string name="calls">CALLS</string>
    <string-array name="name">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
        <item>Eleven</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
        <item>Eleven</item>
    </string-array>

    <string-array name="description">
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
        <item>Hey this is cute</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>